...
            android:layout_height="440dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
            app:layout_constraintVertical_bias="0.012" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="91dp"
...
                app:layout_constraintHorizontal_bias="0.742"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.183" />

            <TextView
                android:id="@+id/textView_details_income"
                android:layout_width="97dp"
                android:layout_height="34dp"
                android:layout_marginStart="46dp"
                android:text="10000.00"
                android:textColor="#2E8B57"
                android:textSize="20sp"
...
