<resources>
    <string name="app_name">account</string>
    <string name="title_size">明细</string>
    <string name="title_chart">图表</string>
    <string name="title_add">记账</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account">账户</string>
    <string name="title_mine">我的</string>
    <string name="confirmation">是否删除该账户</string>
    <string name="sure_to_delete">确认删除</string>
...
